@@ -41,10 +41,13 @@ function econvert(s) {
 return s.replace(/%7E/g,'~').replace(/%28/g,'(').replace(/%29/g,')').replace(/%20/g,' ').replace(/_dot_| dot |_\._|\(\.\)/gi, '.').replace(/_at_|~at~/gi, '@');}
 
 $(function() {
-   $("span.aeh a").each(function() {
+   $("a.aeh").each(function() {
       this.href = econvert(this.href);
       this.innerHTML = econvert(this.innerHTML);
    });
+   $("span.aeh").each(function() {
+      this.innerHTML = econvert(this.innerHTML);
+   });   
 });
 
 
