@@ -71,13 +71,20 @@
 		<td><input name="fromname" tabindex="2"  size="30"
                            tal:define="fromname python:here.getSavedUser('fromname')"
                            tal:attributes="value fromname;
-                                           name string:fromname:${here/UNICODE_ENCODING}:ustring" /></td>
+                                           name string:fromname:${here/UNICODE_ENCODING}:ustring" />
+                    <span class="submiterror" 
+                          tal:condition="errors/fromname|nothing"
+                          tal:content="structure python:here.ShowSubmitError(options, 'fromname')"></span>
+                </td>
 	</tr>
 	<tr tal:condition="not:loggedin">
 		<td><b>Email:</b></td>
 		<td><input name="email" tabindex="3"
                 tal:define="email python:here.getSavedUser('email')"
                 value="" tal:attributes="value email" size="30" />
+                    <span class="submiterror" 
+                          tal:condition="errors/email|nothing"
+                          tal:content="structure python:here.ShowSubmitError(options, 'email')"></span>                
 		</td>
 	</tr>
 	<tr>
